src/objects/Job_Rate_Plan_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <inlineHelpText>Shows the unique accounting code for the order charge. Accounting codes are setup and maintained in the Invoice IT product catalog.</inlineHelpText>
        <label>Revenue Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airway_Bill_Number__c</fullName>
        <label>Airway Bill Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_To_Bill__c</fullName>
        <formula>IF(Legacy_Orders__c,    IF(BMS_Contract_Year__c  == 1, Unit_Price__c,    IF(BMS_Contract_Year__c == 2, AnnualRentYear2__c,   IF(BMS_Contract_Year__c == 3, AnnualRentYear3__c, AnnualRentYear4__c))),    IF(ISNULL(Next_Charge_Date__c)  || Next_Charge_Date__c = Service_Activation_Date__c || Next_Charge_Date__c  &lt;  Next_Uplift_Date__c , Unit_Price__c, (Unit_Price__c * (Uplift__c) + Unit_Price__c))   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field shows the current amount that will be billed for the customer.</inlineHelpText>
        <label>Amount To Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualRentYear2__c</fullName>
        <label>RentYear2(Migration)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualRentYear3__c</fullName>
        <label>RentYear3(Migration)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualRentYear4__c</fullName>
        <label>RentYear4(Migration)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_Contract_Year__c</fullName>
        <label>BMS Contract Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Order_RecordID__c</fullName>
        <formula>Job_Rate_Plan__r.Job_Product__r.Job__r.BMS_Order_RecordID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Order RecordID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <label>Billing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Grouped_Quantity__c</fullName>
        <inlineHelpText>Used in Consortium Billing. Holds the total group quantity of all the order charges that are part of this group.</inlineHelpText>
        <label>Billing Master - Grouped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order Rate Plan Charge level belonging to the Master Order</description>
        <inlineHelpText>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order Rate Plan Charge level belonging to the Master Order</inlineHelpText>
        <label>Billing Master Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Adjusted_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will contain old charge details when midterm adjustment is done for Quantity</inlineHelpText>
        <label>Charge Adjusted From</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Charge Adjusted From)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <inlineHelpText>Shows the unique charge code.</inlineHelpText>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <inlineHelpText>This charge has been invoiced till this date.</inlineHelpText>
        <label>Current Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <formula>HYPERLINK( If( CONTAINS($Api.Partner_Server_URL_260, &apos;partners&apos;), &apos;/partners/&apos; +Id , &apos;/&apos; +Id) ,  Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Id__c</fullName>
        <label>Cloned Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Quantity__c</fullName>
        <inlineHelpText>The quantity your customer commits to spend on a minimum.</inlineHelpText>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_Titles__c</fullName>
        <label>Count Of Titles</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courier__c</fullName>
        <label>Courier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <inlineHelpText>The percentage discount that has been applied to the order charge.</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <inlineHelpText>This determines the type of discount(i.e discount applied by Value or Percentage).</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Percentage</fullName>
                </value>
                <value>
                    <fullName>By Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <inlineHelpText>The discount value that has been applied to the order charge.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatch Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Reason_for_Revenue_Recognition__c</fullName>
        <label>Error Reason for Revenue Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Order Rate Plan Charge Order Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping</label>
        <referenceTo>Grouping__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HK_VOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HK VOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware_Delivery__c</fullName>
        <label>Hardware Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Included_Quantity__c</fullName>
        <label>Included Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Grouping__c</fullName>
        <label>Invoice Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Master Order.Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Cumulative_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cumulative Usage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Shows whether the unit price of an order charge can be updated when creating or editing an order record. If the field is checked, the unit price field can be updated.</inlineHelpText>
        <label>Is Price Editable In Order Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Rate_Plan__c</fullName>
        <inlineHelpText>Shows the Rate Plan that has been selected or automatically applied for this charge.</inlineHelpText>
        <label>Order Rate Plan</label>
        <referenceTo>Job_Rate_Plan__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Job_Rate_Plan_Charge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Uplift_Date__c</fullName>
        <label>Last Uplift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Orders?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Customer_Spend__c</fullName>
        <inlineHelpText>This is the maximum amount your customer will spend for this service. This is the capped amount.</inlineHelpText>
        <label>Max Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Status__c</fullName>
        <label>Mid Term Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Customer_Spend__c</fullName>
        <label>Min Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Quarter_Reports__c</fullName>
        <formula>CASE( Job_Rate_Plan__r.Name , &apos;Monthly Reports&apos;, &apos;month&apos;, &apos;Quarterly Reports&apos;, &apos;quarter&apos;,&apos;PLEASE ENTER&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month/Quarter Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Quarterly_Reports__c</fullName>
        <formula>CASE( Job_Rate_Plan__r.Name , &apos;Monthly Reports&apos;, &apos;monthly&apos;, &apos;Quarterly Reports&apos;, &apos;quarterly&apos;,&apos;PLEASE ENTER&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly/Quarterly Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <inlineHelpText>Shows the Net Total for the order charge which is calculated by subtracting the Discount Value from the Sub Total. (Sub Total - Discount Value)</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Charge_Date__c</fullName>
        <inlineHelpText>This holds the next charge date for this rate plan charge. This means this charge is included in the invoice only if the the invoice target date is on or after this date.</inlineHelpText>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Uplift_Date__c</fullName>
        <inlineHelpText>Date when the uplift will happen.</inlineHelpText>
        <label>Next Uplift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <formula>Order__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrderID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Record_Type_Name__c</fullName>
        <formula>Order__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shows the order record that the charge is related to - click to be taken directly to the order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBD__c</fullName>
        <formula>Text(Job_Rate_Plan__r.Job_Product__r.Job__r.Preferred_Billing_Day__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Other_Charges__c</fullName>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Charge_Date__c</fullName>
        <inlineHelpText>This holds the previous charge date for this rate plan charge.</inlineHelpText>
        <label>Previous Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Format__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Shows the Sub Total for the order charge which is calculated by multiplying the unit price by the quantity being ordered. (Quantity * Unit Price)</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Bundle_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle Line</label>
        <referenceTo>Product_Bundle_Line__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <inlineHelpText>Use this field if you would want to configure different VAT percentages for different categories.</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shows the name of the order charge.</inlineHelpText>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Job_Rate_Plan_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <inlineHelpText>Shows the total profit for the order line (Row Total - Total Unit Cost)</inlineHelpText>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Already_Dispatched__c</fullName>
        <label>Quantity Already Dispatched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>The quantity of products/services being sold</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Dispatch__c</fullName>
        <label>Quantity to Dispatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Charge_Id__c</fullName>
        <label>Quote Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalculate_Revenue_Forecasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Revenue Forecasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecreateUsageMediations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recreate Usage Mediations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Quantity__c -  Quantity_Already_Dispatched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Renewed From)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Required By)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Revenue_Recognition_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Status__c</fullName>
        <label>Revenue Recognition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Revenue_Recognition_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Row_Total__c</fullName>
        <formula>Price__c -  Discount_Value__c +  Tax__c +  VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the row total of this order charge. (Subtotal - Discount + VAT + Tax)</inlineHelpText>
        <label>Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Titles__c</fullName>
        <formula>If($Profile.Name = &quot;KV Sales Agent&quot;, If ( Job_Rate_Plan__r.Job_Product__r.Product__r.Name = &apos;VOD Online&apos; || Order__r.RecordType.Name == &apos;Master Order&apos; , &apos;&apos; , HYPERLINK(&quot;https://kvhcommunity.force.com/partners/apex/assignTitlesToCharge?id=&quot;+Id ,&apos;Select Titles&apos;, &apos;_top&apos;)), If ( Job_Rate_Plan__r.Job_Product__r.Product__r.Name = &apos;VOD Online&apos; || Order__r.RecordType.Name == &apos;Master Order&apos;, &apos;&apos;, HYPERLINK(&quot;https://videotelmarineinternational.my.salesforce.com/apex/assignTitlesToCharge?id=&quot;+Id ,&apos;Select Titles&apos;, &apos;_top&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Titles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <inlineHelpText>This holds the sequence in which the charges are created. Controls the order in which charges appear on reports / documents.</inlineHelpText>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Date__c</fullName>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Shows the status of the order charge. The status field can be used to control whether the order line should be invoiced or provisioned for example.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready to Bill</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Signature</fullName>
                </value>
                <value>
                    <fullName>Ready for Admin Processing</fullName>
                </value>
                <value>
                    <fullName>Administration in Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_City__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <inlineHelpText>Shows the Tax code that has been applied to this charge.</inlineHelpText>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Country__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <inlineHelpText>Shows the Tax percentage that has been applied to this charge. Tax percentages are maintained via the Invoice IT setup page.</inlineHelpText>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_State__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Street__c</fullName>
        <label>Tax Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Zip_Code__c</fullName>
        <label>Tax Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <inlineHelpText>Shows the total amount of Tax applied to this order charge. For Videotel Rentals Tax = ((subtotal/(1-taxrate)-subtotal); i.e 15% tax on 1.00 subtotal ~ (1/(1-.15)-1) = .17647</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Price__c</fullName>
        <label>Transfer Price %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <inlineHelpText>The Unit of Measure (UOM).</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price_1st_Year__c</fullName>
        <label>Unit Price (1st Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_2nd_Year__c</fullName>
        <formula>(Uplift__c * Unit_Price_1st_Year__c) + Unit_Price_1st_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price (2nd Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_3rd_Year__c</fullName>
        <formula>(Uplift__c * Unit_Price_2nd_Year__c) + Unit_Price_2nd_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price (3rd Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_4th_Year__c</fullName>
        <formula>(Uplift__c * Unit_Price_3rd_Year__c) + Unit_Price_3rd_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price (4th Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Per_Unit_Year_1__c</fullName>
        <formula>IF( TEXT(Price_Type__c) = &quot;Half Yearly&quot;, Unit_Price_1st_Year__c * 2 /  Quantity__c, Unit_Price_1st_Year__c /  Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price Per Unit (Year 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Per_Unit_Year_2__c</fullName>
        <formula>IF( TEXT(Price_Type__c) = &quot;Half Yearly&quot;, Unit_Price_2nd_Year__c * 2 / Quantity__c, Unit_Price_2nd_Year__c / Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price Per Unit (Year 2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Per_Unit_Year_3__c</fullName>
        <formula>IF( TEXT(Price_Type__c) = &quot;Half Yearly&quot;, Unit_Price_3rd_Year__c * 2 / Quantity__c, Unit_Price_3rd_Year__c / Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price Per Unit (Year 3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <inlineHelpText>The unit selling price of the order line</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift_Exception__c</fullName>
        <label>Uplift Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Uplift_Frequency__c</fullName>
        <label>Uplift Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Usage_Frequency__c</fullName>
        <label>Usage Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Usage_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_Quantity_for_Usage__c</fullName>
        <inlineHelpText>This field holds the used Quantity of Cumulative Usage</inlineHelpText>
        <label>Used Quantity for Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <inlineHelpText>Shows the VAT percentage that has been applied to this charge. VAT percentages are maintained via the Invoice IT setup page.</inlineHelpText>
        <label>VAT Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows the total amount of VAT applied to this order charge.</inlineHelpText>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>